--- a/mutation_rate.html
+++ b/mutation_rate.html
@@ -502,7 +502,7 @@ div.rendered_html tbody tr:hover {
         <span class="p">),</span>
         <span class="n">data_mut_escape_overlap</span><span class="o">=</span><span class="s2">&quot;fill_to_data&quot;</span><span class="p">,</span>
     <span class="p">)</span>
-    <span class="n">poly_abs</span><span class="o">.</span><span class="n">fit</span><span class="p">()</span>
+    <span class="n">poly_abs</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">reg_escape_weight</span><span class="o">=</span><span class="mf">0.01</span><span class="p">,</span> <span class="n">reg_activity_weight</span><span class="o">=</span><span class="mi">0</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">poly_abs</span>
 
 
@@ -586,7 +586,7 @@ Model on data with 4 average mutations was already fit.
     <span class="n">column</span><span class="o">=</span><span class="s2">&quot;epitope:N&quot;</span><span class="p">,</span>
     <span class="n">tooltip</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;mutation_rate&quot;</span><span class="p">,</span> <span class="n">alt</span><span class="o">.</span><span class="n">Tooltip</span><span class="p">(</span><span class="s2">&quot;correlation (R^2)&quot;</span><span class="p">,</span> <span class="nb">format</span><span class="o">=</span><span class="s2">&quot;.3f&quot;</span><span class="p">)],</span>
     <span class="n">color</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">Color</span><span class="p">(</span>
-        <span class="s2">&quot;epitope&quot;</span><span class="p">,</span> <span class="n">scale</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">Scale</span><span class="p">(</span><span class="nb">range</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;#1f77b4&quot;</span><span class="p">,</span> <span class="s2">&quot;#ff7f0e&quot;</span><span class="p">,</span> <span class="s2">&quot;#2ca02c&quot;</span><span class="p">]),</span> <span class="n">legend</span><span class="o">=</span><span class="kc">None</span>
+        <span class="s2">&quot;epitope&quot;</span><span class="p">,</span> <span class="n">scale</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">Scale</span><span class="p">(</span><span class="nb">range</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;#0072B2&quot;</span><span class="p">,</span> <span class="s2">&quot;#009E73&quot;</span><span class="p">,</span> <span class="s2">&quot;#CC79A7&quot;</span><span class="p">]),</span> <span class="n">legend</span><span class="o">=</span><span class="kc">None</span>
     <span class="p">),</span>
 <span class="p">)</span><span class="o">.</span><span class="n">properties</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="mi">200</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="mi">200</span><span class="p">,</span> <span class="n">title</span><span class="o">=</span><span class="s2">&quot;inferred vs. true mutation escape values&quot;</span><span class="p">)</span>
 </pre></div>
@@ -597,13 +597,13 @@ Model on data with 4 average mutations was already fit.
 </pre></div>
 </div>
 <div class="output_area rendered_html docutils container">
-<div id="altair-viz-e8d6f93a06e34ead82c74477472ebb39"></div>
+<div id="altair-viz-6416e22e389b4291b6e4eca09d47bb0d"></div>
 <script type="text/javascript">
   var VEGA_DEBUG = (typeof VEGA_DEBUG == "undefined") ? {} : VEGA_DEBUG;
   (function(spec, embedOpt){
     let outputDiv = document.currentScript.previousElementSibling;
-    if (outputDiv.id !== "altair-viz-e8d6f93a06e34ead82c74477472ebb39") {
-      outputDiv = document.getElementById("altair-viz-e8d6f93a06e34ead82c74477472ebb39");
+    if (outputDiv.id !== "altair-viz-6416e22e389b4291b6e4eca09d47bb0d") {
+      outputDiv = document.getElementById("altair-viz-6416e22e389b4291b6e4eca09d47bb0d");
     }
     const paths = {
       "vega": "https://cdn.jsdelivr.net/npm//vega@5?noext",
@@ -649,7 +649,7 @@ Model on data with 4 average mutations was already fit.
         .catch(showError)
         .then(() => displayChart(vegaEmbed));
     }
-  })({"config": {"view": {"continuousWidth": 400, "continuousHeight": 300}}, "data": {"name": "data-cd1163d1a1de32843830cdaafc499aeb"}, "mark": {"type": "circle", "size": 125}, "encoding": {"color": {"field": "epitope", "legend": null, "scale": {"range": ["#1f77b4", "#ff7f0e", "#2ca02c"]}, "type": "nominal"}, "column": {"field": "epitope", "type": "nominal"}, "tooltip": [{"field": "mutation_rate", "type": "nominal"}, {"field": "correlation (R^2)", "format": ".3f", "type": "quantitative"}], "x": {"field": "mutation_rate", "sort": {"field": "x", "order": "descending"}, "type": "ordinal"}, "y": {"field": "correlation (R^2)", "type": "quantitative"}}, "height": 200, "title": "inferred vs. true mutation escape values", "width": 200, "$schema": "https://vega.github.io/schema/vega-lite/v5.2.0.json", "datasets": {"data-cd1163d1a1de32843830cdaafc499aeb": [{"epitope": "class 1", "correlation (R^2)": 0.004985940885516334, "mutation_rate": "avg1muts"}, {"epitope": "class 2", "correlation (R^2)": 0.5909947979881985, "mutation_rate": "avg1muts"}, {"epitope": "class 3", "correlation (R^2)": 1.1906483649527809e-05, "mutation_rate": "avg1muts"}, {"epitope": "class 1", "correlation (R^2)": 0.6270592143850509, "mutation_rate": "avg2muts"}, {"epitope": "class 2", "correlation (R^2)": 0.9110537818210763, "mutation_rate": "avg2muts"}, {"epitope": "class 3", "correlation (R^2)": 0.8511594377876831, "mutation_rate": "avg2muts"}, {"epitope": "class 1", "correlation (R^2)": 0.7244790198100587, "mutation_rate": "avg3muts"}, {"epitope": "class 2", "correlation (R^2)": 0.9438943282002382, "mutation_rate": "avg3muts"}, {"epitope": "class 3", "correlation (R^2)": 0.8928066673940255, "mutation_rate": "avg3muts"}, {"epitope": "class 1", "correlation (R^2)": 0.7513478284252502, "mutation_rate": "avg4muts"}, {"epitope": "class 2", "correlation (R^2)": 0.940805497333503, "mutation_rate": "avg4muts"}, {"epitope": "class 3", "correlation (R^2)": 0.9035728686443523, "mutation_rate": "avg4muts"}]}}, {"mode": "vega-lite"});
+  })({"config": {"view": {"continuousWidth": 400, "continuousHeight": 300}}, "data": {"name": "data-2df929f67f8a87bcedc65c2397a19805"}, "mark": {"type": "circle", "size": 125}, "encoding": {"color": {"field": "epitope", "legend": null, "scale": {"range": ["#0072B2", "#009E73", "#CC79A7"]}, "type": "nominal"}, "column": {"field": "epitope", "type": "nominal"}, "tooltip": [{"field": "mutation_rate", "type": "nominal"}, {"field": "correlation (R^2)", "format": ".3f", "type": "quantitative"}], "x": {"field": "mutation_rate", "sort": {"field": "x", "order": "descending"}, "type": "ordinal"}, "y": {"field": "correlation (R^2)", "type": "quantitative"}}, "height": 200, "title": "inferred vs. true mutation escape values", "width": 200, "$schema": "https://vega.github.io/schema/vega-lite/v5.2.0.json", "datasets": {"data-2df929f67f8a87bcedc65c2397a19805": [{"epitope": "class 1", "correlation (R^2)": 0.005858759829229752, "mutation_rate": "avg1muts"}, {"epitope": "class 2", "correlation (R^2)": 0.5680807846818832, "mutation_rate": "avg1muts"}, {"epitope": "class 3", "correlation (R^2)": 0.0017380628946666657, "mutation_rate": "avg1muts"}, {"epitope": "class 1", "correlation (R^2)": 0.6538360924023249, "mutation_rate": "avg2muts"}, {"epitope": "class 2", "correlation (R^2)": 0.9126253026896349, "mutation_rate": "avg2muts"}, {"epitope": "class 3", "correlation (R^2)": 0.8611996177323354, "mutation_rate": "avg2muts"}, {"epitope": "class 1", "correlation (R^2)": 0.7653930008850555, "mutation_rate": "avg3muts"}, {"epitope": "class 2", "correlation (R^2)": 0.946361669262305, "mutation_rate": "avg3muts"}, {"epitope": "class 3", "correlation (R^2)": 0.9064549318480574, "mutation_rate": "avg3muts"}, {"epitope": "class 1", "correlation (R^2)": 0.7837810353244848, "mutation_rate": "avg4muts"}, {"epitope": "class 2", "correlation (R^2)": 0.9414944910250483, "mutation_rate": "avg4muts"}, {"epitope": "class 3", "correlation (R^2)": 0.9140995655059172, "mutation_rate": "avg4muts"}]}}, {"mode": "vega-lite"});
 </script></div>
 </div>
 <section id="Summary">
