--- a/_modules/polyclonal/plot.html
+++ b/_modules/polyclonal/plot.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.plot &#8212; polyclonal 3.1 documentation</title>
+    <title>polyclonal.plot &#8212; polyclonal 3.3 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
@@ -321,6 +321,11 @@
     <span class="n">heatmap_min_at_least</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="n">site_zoom_bar_color_scheme</span><span class="o">=</span><span class="s2">&quot;set3&quot;</span><span class="p">,</span>
     <span class="n">slider_binding_range_kwargs</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
+    <span class="n">show_zoombar</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+    <span class="n">show_lineplot</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+    <span class="n">show_heatmap</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+    <span class="n">scale_stat_col</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span>
+    <span class="n">rename_stat_col</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
 <span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Lineplots and heatmaps of per-site and per-mutation values.</span>
 
@@ -387,7 +392,28 @@
 <span class="sd">        Keyed by keys in ``addtl_slider_stats``, with values being dicts</span>
 <span class="sd">        giving keyword arguments passed to ``altair.binding_range`` (eg,</span>
 <span class="sd">        &#39;min&#39;, &#39;max&#39;, &#39;step&#39;, etc.</span>
+<span class="sd">    show_zoombar : bool</span>
+<span class="sd">        Show the zoom bar in the returned chart.</span>
+<span class="sd">    show_lineplot : bool</span>
+<span class="sd">        Show the lineplot in the returned chart.</span>
+<span class="sd">    show_heatmap : bool</span>
+<span class="sd">        Show the lineplot in the returned chart.</span>
+<span class="sd">    scale_stat_col : float</span>
+<span class="sd">        Multiply numbers in `stat_col` by this number before plotting.</span>
+<span class="sd">    rename_stat_col : None or str</span>
+<span class="sd">        If a str, rename `stat_col` to this. Also changes y-axis labels.</span>
+
+<span class="sd">    Returns</span>
+<span class="sd">    -------</span>
+<span class="sd">    altair.Chart</span>
+<span class="sd">        Interactive plot.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
+    <span class="k">if</span> <span class="n">rename_stat_col</span><span class="p">:</span>
+        <span class="k">if</span> <span class="n">rename_stat_col</span> <span class="ow">in</span> <span class="n">data_df</span><span class="o">.</span><span class="n">columns</span><span class="p">:</span>
+            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">rename_stat_col</span><span class="si">=}</span><span class="s2"> already in </span><span class="si">{</span><span class="n">data_df</span><span class="o">.</span><span class="n">columns</span><span class="si">=}</span><span class="s2">&quot;</span><span class="p">)</span>
+        <span class="n">data_df</span> <span class="o">=</span> <span class="n">data_df</span><span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="p">{</span><span class="n">stat_col</span><span class="p">:</span> <span class="n">rename_stat_col</span><span class="p">})</span>
+        <span class="n">stat_col</span> <span class="o">=</span> <span class="n">rename_stat_col</span>
+
     <span class="n">basic_req_cols</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">,</span> <span class="s2">&quot;wildtype&quot;</span><span class="p">,</span> <span class="s2">&quot;mutant&quot;</span><span class="p">,</span> <span class="n">stat_col</span><span class="p">,</span> <span class="n">category_col</span><span class="p">]</span>
     <span class="k">if</span> <span class="n">addtl_tooltip_stats</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
         <span class="n">addtl_tooltip_stats</span> <span class="o">=</span> <span class="p">[]</span>
@@ -401,7 +427,11 @@
         <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Missing required columns</span><span class="se">\n</span><span class="si">{</span><span class="n">data_df</span><span class="o">.</span><span class="n">columns</span><span class="si">=}</span><span class="se">\n</span><span class="si">{</span><span class="n">req_cols</span><span class="si">=}</span><span class="s2">&quot;</span><span class="p">)</span>
     <span class="k">if</span> <span class="nb">any</span><span class="p">(</span><span class="n">c</span><span class="o">.</span><span class="n">startswith</span><span class="p">(</span><span class="s2">&quot;_stat&quot;</span><span class="p">)</span> <span class="k">for</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">req_cols</span><span class="p">):</span>  <span class="c1"># used for calculated stats</span>
         <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;No columns can start with &#39;_stat&#39; in </span><span class="si">{</span><span class="n">data_df</span><span class="o">.</span><span class="n">columns</span><span class="si">=}</span><span class="s2">&quot;</span><span class="p">)</span>
-    <span class="n">data_df</span> <span class="o">=</span> <span class="n">data_df</span><span class="p">[</span><span class="n">req_cols</span><span class="p">]</span><span class="o">.</span><span class="n">reset_index</span><span class="p">(</span><span class="n">drop</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+    <span class="n">data_df</span> <span class="o">=</span> <span class="p">(</span>
+        <span class="n">data_df</span><span class="p">[</span><span class="n">req_cols</span><span class="p">]</span>
+        <span class="o">.</span><span class="n">reset_index</span><span class="p">(</span><span class="n">drop</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+        <span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="o">**</span><span class="p">{</span><span class="n">stat_col</span><span class="p">:</span> <span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">x</span><span class="p">[</span><span class="n">stat_col</span><span class="p">]</span> <span class="o">*</span> <span class="n">scale_stat_col</span><span class="p">})</span>
+    <span class="p">)</span>
 
     <span class="c1"># filter `data_df` by any minimums in `slider_binding_range_kwargs`</span>
     <span class="k">if</span> <span class="n">slider_binding_range_kwargs</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
@@ -804,8 +834,15 @@
         <span class="k">else</span> <span class="s2">&quot;independent&quot;</span><span class="p">,</span>
     <span class="p">)</span>
 
+    <span class="n">chartlist</span> <span class="o">=</span> <span class="p">[]</span>
+    <span class="k">if</span> <span class="n">show_zoombar</span><span class="p">:</span>
+        <span class="n">chartlist</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">site_zoom_bar</span><span class="p">)</span>
+    <span class="k">if</span> <span class="n">show_lineplot</span><span class="p">:</span>
+        <span class="n">chartlist</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">site_lineplot</span><span class="p">)</span>
+    <span class="k">if</span> <span class="n">show_heatmap</span><span class="p">:</span>
+        <span class="n">chartlist</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">heatmaps</span><span class="p">)</span>
     <span class="n">chart</span> <span class="o">=</span> <span class="p">(</span>
-        <span class="n">alt</span><span class="o">.</span><span class="n">vconcat</span><span class="p">(</span><span class="n">site_zoom_bar</span><span class="p">,</span> <span class="n">site_lineplot</span><span class="p">,</span> <span class="n">heatmaps</span><span class="p">)</span>
+        <span class="n">alt</span><span class="o">.</span><span class="n">vconcat</span><span class="p">(</span><span class="o">*</span><span class="n">chartlist</span><span class="p">)</span>
         <span class="o">.</span><span class="n">add_parameter</span><span class="p">(</span><span class="n">floor_at_zero</span><span class="p">,</span> <span class="n">site_brush</span><span class="p">,</span> <span class="o">*</span><span class="n">sliders</span><span class="o">.</span><span class="n">values</span><span class="p">())</span>
         <span class="o">.</span><span class="n">configure</span><span class="p">(</span><span class="n">padding</span><span class="o">=</span><span class="mi">10</span><span class="p">)</span>
         <span class="o">.</span><span class="n">configure_axis</span><span class="p">(</span><span class="n">labelOverlap</span><span class="o">=</span><span class="s2">&quot;parity&quot;</span><span class="p">,</span> <span class="n">grid</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span>
@@ -920,7 +957,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer">
-      &copy;2019--2022.
+      &copy;2019--2023.
       
       |
       Powered by <a href="http://sphinx-doc.org/">Sphinx 4.2.0</a>
