--- a/genindex.html
+++ b/genindex.html
@@ -1,18 +1,17 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; polyclonal 3.3 documentation</title>
+    <title>Index &#8212; polyclonal 3.4 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="_static/plot_directive.css" />
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
-    <script src="_static/jquery.js"></script>
-    <script src="_static/underscore.js"></script>
     <script src="_static/doctools.js"></script>
+    <script src="_static/sphinx_highlight.js"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
@@ -50,6 +49,7 @@
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
+ | <a href="#U"><strong>U</strong></a>
  | <a href="#W"><strong>W</strong></a>
  
 </div>
@@ -235,10 +235,10 @@
         <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_corr">(polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_corr_heatmap">mut_escape_corr_heatmap() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_df">mut_escape_df (polyclonal.polyclonal.Polyclonal property)</a>
 
       <ul>
@@ -246,6 +246,8 @@
 </li>
       </ul></li>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_df_replicates">mut_escape_df_replicates (polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
+</li>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_escape_df_w_model_values">mut_escape_df_w_model_values (polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_pdb_b_factor">mut_escape_pdb_b_factor() (polyclonal.polyclonal.Polyclonal method)</a>
 </li>
@@ -409,6 +411,14 @@
   </ul></td>
 </tr></table>
 
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.unique_descriptor_names">unique_descriptor_names (polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -492,7 +502,7 @@
     </form>
     </div>
 </div>
-<script>$('#searchbox').show(0);</script>
+<script>document.getElementById('searchbox').style.display = "block"</script>
 
 
 
@@ -509,8 +519,8 @@
       &copy;2019--2023.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 4.2.0</a>
-      &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.12</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 6.1.3</a>
+      &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
       
     </div>
 
