--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; polyclonal 4.1 documentation</title>
+    <title>Index &#8212; polyclonal 5.0 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="_static/plot_directive.css" />
@@ -367,8 +367,6 @@
         <li><a href="polyclonal.polyclonal.html#module-polyclonal.polyclonal">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     polyclonal.polyclonal_collection
 
@@ -376,6 +374,8 @@
         <li><a href="polyclonal.polyclonal_collection.html#module-polyclonal.polyclonal_collection">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     polyclonal.utils
 
@@ -390,6 +390,8 @@
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection">PolyclonalCollection (class in polyclonal.polyclonal_collection)</a>
 </li>
       <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollectionFitError">PolyclonalCollectionFitError</a>
+</li>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.PolyclonalConcentrationError">PolyclonalConcentrationError</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.PolyclonalFitError">PolyclonalFitError</a>
 </li>
